@@ -44,6 +44,9 @@ Bug Fixes
   NumericRangeQueryQuery.xml to NumericRangeQuery.xml
   (Christine Poerschke)
 
+* LUCENE-6945: factor out TestCorePlus(Queries|Extensions)Parser from
+  TestParser (Christine Poerschke)
+
 ======================= Lucene 5.4.0 =======================
 
 New Features
